--- a/index.html
+++ b/index.html
@@ -3,6 +3,29 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/coin-venture.png" />
+		<meta name="viewport" content="width=1024" />
+		<!-- Smartsupp Live Chat script -->
+		<script type="text/javascript">
+			var _smartsupp = _smartsupp || {};
+			_smartsupp.key = "0264a4e48b28cea5a1c3a8429831071eda03a3ec";
+			window.smartsupp ||
+				(function (d) {
+					var s,
+						c,
+						o = (smartsupp = function () {
+							o._.push(arguments);
+						});
+					o._ = [];
+					s = d.getElementsByTagName("script")[0];
+					c = d.createElement("script");
+					c.type = "text/javascript";
+					c.charset = "utf-8";
+					c.async = true;
+					c.src = "https://www.smartsuppchat.com/loader.js?";
+					s.parentNode.insertBefore(c, s);
+				})(document);
+		</script>
+
 		<link
 			type="text/css"
 			rel="stylesheet"
