--- a/index.html
+++ b/index.html
@@ -83,7 +83,18 @@
 		<title>Coin Venture</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root">
+			<div id="google_translate_element"></div>
+			<script>
+				function googleTranslateElementInit() {
+					new google.translate.TranslateElement(
+						{ pageLanguage: "en" },
+						"google_translate_element"
+					);
+				}
+			</script>
+			<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		</div>
 		<script type="module" src="/src/main.tsx"></script>
 		<script src="/vendor/jquery/jquery.min.js"></script>
 		<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
