--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/coin-venture.png" />
 		<meta name="viewport" content="width=1024" />
+		<!-- Google translate -->
+		<script>
+			function googleTranslateElementInit() {
+				new google.translate.TranslateElement(
+					{ pageLanguage: "en" },
+					"google_translate_element"
+				);
+			}
+		</script>
+		<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 		<!-- Smartsupp Live Chat script -->
 		<script type="text/javascript">
 			var _smartsupp = _smartsupp || {};
@@ -83,18 +93,7 @@
 		<title>Coin Venture</title>
 	</head>
 	<body>
-		<div id="root">
-			<div id="google_translate_element"></div>
-			<script>
-				function googleTranslateElementInit() {
-					new google.translate.TranslateElement(
-						{ pageLanguage: "en" },
-						"google_translate_element"
-					);
-				}
-			</script>
-			<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-		</div>
+		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
 		<script src="/vendor/jquery/jquery.min.js"></script>
 		<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
