--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 				);
 			}
 		</script>
+		<script
+			type="text/javascript"
+			charset="UTF-8"
+			src="https://translate.googleapis.com/_/translate_http/_/js/k=translate_http.tr.en_GB.FDYtzgjozgY.O/d=1/exm=el_conf/ed=1/rs=AN8SPfod0pMUI8A_9qWiVZP7JB-SJx5WrQ/m=el_main"
+		></script>
+		<link
+			type="text/css"
+			rel="stylesheet"
+			charset="UTF-8"
+			href="https://www.gstatic.com/_/translate_http/_/ss/k=translate_http.tr.TpYxICw8iG4.L.F4.O/am=CAM/d=0/rs=AN8SPfraOsu5efVNBOQ1KgAVxhCYpwxnBg/m=el_main_css"
+		/>
 		<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 		<!-- Smartsupp Live Chat script -->
 		<script type="text/javascript">
