--- a/index.html
+++ b/index.html
@@ -95,12 +95,11 @@
 			type="text/css"
 			rel="stylesheet"
 			media="all"
-			href="/fonts/flaticon/flaticon.css"
+			href="/fonts/f	laticon/flaticon.css"
 		/>
 
 		<!-- Bootbox Template CSS -->
 		<link type="text/css" rel="stylesheet" media="all" href="/css/main.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Coin Venture</title>
 	</head>
 	<body>
